--- a/client/index.html
+++ b/client/index.html
@@ -1,27 +1,34 @@
+// === client/index.html ===
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Battleship Multiplayer</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Battleship</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="menu">
-    <button id="newGameBtn">Start New Game</button>
+    <button id="newGameBtn">New Game</button>
     <button id="joinGameBtn">Join Game</button>
-    <input id="gameCodeInput" placeholder="Game Code" maxlength="6">
+    <input id="gameCodeInput" placeholder="Enter Code" maxlength="6">
   </div>
 
-  <div id="gameUI" style="display:none;">
+  <div id="gameUI" hidden>
+    <div id="shipPicker">
+      <div id="orientationToggle">Orientation: <span id="orient">H</span></div>
+      <div class="ship" draggable="true" data-length="5">Carrier (5)</div>
+      <div class="ship" draggable="true" data-length="4">Battleship (4)</div>
+      <div class="ship" draggable="true" data-length="3">Cruiser (3)</div>
+      <div class="ship" draggable="true" data-length="3">Submarine (3)</div>
+      <div class="ship" draggable="true" data-length="2">Destroyer (2)</div>
+    </div>
     <div id="boards">
       <div id="ownBoard" class="board"></div>
       <div id="opponentBoard" class="board"></div>
     </div>
     <div id="status"></div>
   </div>
-
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 </body>
